// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WalletModal Snapshots matches snapshot when closed 1`] = `<div />`;

exports[`WalletModal Snapshots matches snapshot when open 1`] = `
<div>
  <div
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center; z-index: 1000;"
  >
    <div
      style="border-radius: 24px; padding: 32px; width: 440px; max-width: 90vw; max-height: 80vh; overflow-y: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); position: relative;"
    >
      <style>
        
            @keyframes spin {
              0% { transform: rotate(0deg); }
              100% { transform: rotate(360deg); }
            }
          
      </style>
      <div
        style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 24px; padding-bottom: 16px;"
      >
        <div>
          <h2
            style="font-size: 24px; font-weight: bold; margin: 0px;"
          >
            Connect Wallet
          </h2>
          <p
            style="margin: 4px 0px 0px 0px; font-size: 14px;"
          >
            Connect your wallet to access Web3 features
          </p>
        </div>
        <button
          style="background: none; font-size: 24px; cursor: pointer; padding: 4px; border-radius: 8px; display: flex; align-items: center; justify-content: center; width: 32px; height: 32px;"
        >
          ×
        </button>
      </div>
      <div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🦊
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              MetaMask
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using MetaMask wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            📱
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              WalletConnect
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using WalletConnect protocol
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🔵
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Coinbase Wallet
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Coinbase Wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🌈
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Rainbow
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Rainbow wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
      </div>
      <div
        style="margin-top: 24px; padding-top: 16px; font-size: 12px; text-align: center;"
      >
        <p>
          By connecting a wallet, you agree to CRYB's
           
          <span
            style="cursor: pointer;"
          >
            Terms of Service
          </span>
           
          and
           
          <span
            style="cursor: pointer;"
          >
            Privacy Policy
          </span>
        </p>
        <p
          style="margin-top: 8px;"
        >
          New to Web3?
           
          <span
            style="cursor: pointer; text-decoration: underline;"
          >
            Learn about wallets
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletModal Snapshots matches snapshot while connecting 1`] = `
<div>
  <div
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center; z-index: 1000;"
  >
    <div
      style="border-radius: 24px; padding: 32px; width: 440px; max-width: 90vw; max-height: 80vh; overflow-y: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); position: relative;"
    >
      <style>
        
            @keyframes spin {
              0% { transform: rotate(0deg); }
              100% { transform: rotate(360deg); }
            }
          
      </style>
      <div
        style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 24px; padding-bottom: 16px;"
      >
        <div>
          <h2
            style="font-size: 24px; font-weight: bold; margin: 0px;"
          >
            Connect Wallet
          </h2>
          <p
            style="margin: 4px 0px 0px 0px; font-size: 14px;"
          >
            Connect your wallet to access Web3 features
          </p>
        </div>
        <button
          style="background: none; font-size: 24px; cursor: pointer; padding: 4px; border-radius: 8px; display: flex; align-items: center; justify-content: center; width: 32px; height: 32px;"
        >
          ×
        </button>
      </div>
      <div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🦊
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              MetaMask
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using MetaMask wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            📱
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              WalletConnect
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using WalletConnect protocol
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🔵
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Coinbase Wallet
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Coinbase Wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🌈
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Rainbow
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Rainbow wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
      </div>
      <div
        style="margin-top: 24px; padding-top: 16px; font-size: 12px; text-align: center;"
      >
        <p>
          By connecting a wallet, you agree to CRYB's
           
          <span
            style="cursor: pointer;"
          >
            Terms of Service
          </span>
           
          and
           
          <span
            style="cursor: pointer;"
          >
            Privacy Policy
          </span>
        </p>
        <p
          style="margin-top: 8px;"
        >
          New to Web3?
           
          <span
            style="cursor: pointer; text-decoration: underline;"
          >
            Learn about wallets
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletModal Snapshots matches snapshot with error 1`] = `
<div>
  <div
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center; z-index: 1000;"
  >
    <div
      style="border-radius: 24px; padding: 32px; width: 440px; max-width: 90vw; max-height: 80vh; overflow-y: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); position: relative;"
    >
      <style>
        
            @keyframes spin {
              0% { transform: rotate(0deg); }
              100% { transform: rotate(360deg); }
            }
          
      </style>
      <div
        style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 24px; padding-bottom: 16px;"
      >
        <div>
          <h2
            style="font-size: 24px; font-weight: bold; margin: 0px;"
          >
            Connect Wallet
          </h2>
          <p
            style="margin: 4px 0px 0px 0px; font-size: 14px;"
          >
            Connect your wallet to access Web3 features
          </p>
        </div>
        <button
          style="background: none; font-size: 24px; cursor: pointer; padding: 4px; border-radius: 8px; display: flex; align-items: center; justify-content: center; width: 32px; height: 32px;"
        >
          ×
        </button>
      </div>
      <div
        style="padding: 12px 16px; border-radius: 8px; margin-bottom: 16px; font-size: 14px;"
      >
        Test error message
      </div>
      <div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🦊
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              MetaMask
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using MetaMask wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            📱
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              WalletConnect
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using WalletConnect protocol
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🔵
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Coinbase Wallet
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Coinbase Wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🌈
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Rainbow
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Rainbow wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
      </div>
      <div
        style="margin-top: 24px; padding-top: 16px; font-size: 12px; text-align: center;"
      >
        <p>
          By connecting a wallet, you agree to CRYB's
           
          <span
            style="cursor: pointer;"
          >
            Terms of Service
          </span>
           
          and
           
          <span
            style="cursor: pointer;"
          >
            Privacy Policy
          </span>
        </p>
        <p
          style="margin-top: 8px;"
        >
          New to Web3?
           
          <span
            style="cursor: pointer; text-decoration: underline;"
          >
            Learn about wallets
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletModal Snapshots matches snapshot without MetaMask installed 1`] = `
<div>
  <div
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center; z-index: 1000;"
  >
    <div
      style="border-radius: 24px; padding: 32px; width: 440px; max-width: 90vw; max-height: 80vh; overflow-y: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); position: relative;"
    >
      <style>
        
            @keyframes spin {
              0% { transform: rotate(0deg); }
              100% { transform: rotate(360deg); }
            }
          
      </style>
      <div
        style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 24px; padding-bottom: 16px;"
      >
        <div>
          <h2
            style="font-size: 24px; font-weight: bold; margin: 0px;"
          >
            Connect Wallet
          </h2>
          <p
            style="margin: 4px 0px 0px 0px; font-size: 14px;"
          >
            Connect your wallet to access Web3 features
          </p>
        </div>
        <button
          style="background: none; font-size: 24px; cursor: pointer; padding: 4px; border-radius: 8px; display: flex; align-items: center; justify-content: center; width: 32px; height: 32px;"
        >
          ×
        </button>
      </div>
      <div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🦊
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              MetaMask
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using MetaMask wallet
            </div>
          </div>
          <button
            style="border-radius: 8px; padding: 8px 16px; font-size: 14px; font-weight: 500; cursor: pointer; transition: all 0.2s;"
          >
            Install
          </button>
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            📱
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              WalletConnect
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using WalletConnect protocol
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🔵
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Coinbase Wallet
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Coinbase Wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
        <div
          style="display: flex; align-items: center; padding: 16px; border-radius: 12px; margin-bottom: 12px; cursor: pointer; transition: all 0.2s; position: relative;"
        >
          <div
            style="font-size: 32px; margin-right: 16px; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 12px;"
          >
            🌈
          </div>
          <div
            style="flex: 1;"
          >
            <div
              style="font-size: 16px; font-weight: 600; margin-bottom: 4px;"
            >
              Rainbow
            </div>
            <div
              style="font-size: 14px;"
            >
              Connect using Rainbow wallet
            </div>
          </div>
          <div
            style="width: 8px; height: 8px; border-radius: 50%;"
          />
        </div>
      </div>
      <div
        style="margin-top: 24px; padding-top: 16px; font-size: 12px; text-align: center;"
      >
        <p>
          By connecting a wallet, you agree to CRYB's
           
          <span
            style="cursor: pointer;"
          >
            Terms of Service
          </span>
           
          and
           
          <span
            style="cursor: pointer;"
          >
            Privacy Policy
          </span>
        </p>
        <p
          style="margin-top: 8px;"
        >
          New to Web3?
           
          <span
            style="cursor: pointer; text-decoration: underline;"
          >
            Learn about wallets
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
